[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/project/projects_list.gd" type="Script" id=1]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/project/project_crud/project_crud_popup.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/tilth_project_tracker/tilth/themes/light/theme_light.tres" type="Theme" id=3]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/window/menu_bar.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.960784, 0.960784, 0.964706, 1 )

[node name="ProjectsList" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VLayout" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MenuBar" parent="VLayout" instance=ExtResource( 4 )]
margin_right = 1024.0
margin_bottom = 49.0

[node name="Padding" type="MarginContainer" parent="VLayout"]
margin_top = 53.0
margin_right = 1024.0
margin_bottom = 180.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VertLayout" type="VBoxContainer" parent="VLayout/Padding"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 117.0
custom_constants/separation = 10

[node name="HLayout" type="HBoxContainer" parent="VLayout/Padding/VertLayout"]
margin_right = 1004.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="VLayout/Padding/VertLayout/HLayout"]
margin_right = 476.0
margin_bottom = 23.0
text = "Create a new project or load an existing one from the list below"

[node name="ProjectListRows" type="VBoxContainer" parent="VLayout/Padding/VertLayout"]
margin_top = 33.0
margin_right = 1004.0
margin_bottom = 107.0
custom_constants/separation = 10

[node name="ProjectCrudPopup" parent="." instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1366.0
margin_bottom = 768.0
window_title = "Create project"
